frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventoryjs-frontend-ingress
  namespace: inventoryjs-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  #tls:
  #  - hosts:
  #      - findmyapp.net
  #    secretName: inventoryjs-certificate-secret
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
